# lickbot2

./: Cargo.toml
src/: main.rs  pvp.rs  task.rs
src/commands/: misc.rs  mod.rs  movement.rs  pvp.rs
src/item/: extensions.rs  inventory.rs  mod.rs  weapon.rs
