[package]
name = "lickbot2"
version = "0.1.0"
description = "skynet for block game"
edition = "2024"

[dependencies]
# azalea = { path = "../azalea/azalea", version = "0.16.0" }
azalea = { git = "https://github.com/x-osc/azalea", version = "0.16.0", branch = "dev" }
clap = { version = "4.6.0", features = ["derive"] }
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
tokio = "1.51.0"
tracing = "0.1.44"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
